--- a/css/list.css
+++ b/css/list.css
@@ -1,4 +1,5 @@
 #lists main {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -14,18 +15,21 @@
 
 #lists > main > ul {
     width: 100%;
+    height: 750px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
+    overflow-y: auto;
 }
 
 .book-list-item {
     list-style-type: none;
     width: 100%;
     display: inline-block;
-    border: 1px solid black;
+    border: 1px solid #606060;
+    background-color: #202020;
     border-radius: 5px;
     padding: 5px;
     display: flex;
